# cpp-playground

./: .gitignore  Makefile  README.md  function.cpp  sizeof.cpp
cmake/: .gitignore  CMakeLists.txt  cmake_tutorial.cpp
cmake/math/: .gitignore  CMakeLists.txt  square.cpp
header/: main.cpp  square.h  triangle.h
smart_pointers/: unique_ptr.cpp
